--- a/CLAM/plugins/sndfile/SConstruct
+++ b/CLAM/plugins/sndfile/SConstruct
@@ -12,12 +12,10 @@ otherDependencies = [
 	]
 
 options = Variables('options.cache', ARGUMENTS)
-options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', '/usr/local'))
 options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
-if sys.platform=='linux2' :
-	options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
-
+options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
+options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 toolChain = 'default'
 if sys.platform == "win32": toolChain = 'mingw'
 env = Environment(ENV=os.environ, tools=[toolChain], options=options)
