--- a/trunk/CLAM/doxygen.cfg
+++ b/trunk/CLAM/doxygen.cfg
@@ -1074,7 +1074,7 @@ SKIP_FUNCTION_MACROS   = YES
 # If a tag file is not located in the directory in which doxygen 
 # is run, you must also specify the path to the tagfile here.
 
-TAGFILES               = http://gcc.gnu.org/onlinedocs/libstdc++/latest-doxygen/libstdc++.tag
+ TAGFILES = "libstdc++.tag = http://gcc.gnu.org/onlinedocs/libstdc++/latest-doxygen" 
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create 
 # a tag file that is based on the input files it reads.
