* chordata/SConstruct: adde QSvg.dll needed for the icons

--- a/chordata/SConstruct
+++ b/chordata/SConstruct
@@ -202,7 +202,7 @@ if isWindowsPlatform :
 		env.Install(
 			env['prefix']+"/bin",
 			os.path.join(env['QTDIR'],'bin',"Qt"+dll+"4.dll")
-			) for dll in 'Core', 'Gui', 'OpenGL']
+			) for dll in 'Core', 'Gui', 'OpenGL', 'Svg']
 	env.Append(NSIS_OPTIONS=['/DVERSION=%s' % fullVersion ])
 	env.Append(NSIS_OPTIONS=['/DQTDIR=%s'%winqtdir ])
 	env.Append(NSIS_OPTIONS=['/DEXTERNALDLLDIR=%s' % externalDllPath ])
